@@ -1,0 +1,17 @@
+Context Menu
+------------
+
+  This example shows how to create and interact with context menu items.
+  
+  In the example, shoulder-clicking (ie. holding L or R and tapping) the textbox
+  will cause the context-sensitive menu to appear.  It contains 4 items.
+  Selecting one of the items will cause the value of the item to appear in the
+  textbox.
+
+  
+Building the Example
+--------------------
+
+  To build this example, open a shell, navigate to this directory, and type
+  "make".  Note that this will also compile the Woopsi source; this will be
+  necessary until Woopsi ships as a library.
