@@ -1,0 +1,9 @@
+// Includes
+#include "contextmenutest.h"
+
+int main(int argc, char* argv[]) {
+
+	// Create the application
+	ContextMenuTest app;
+	return app.main(argc, argv);
+}
