@@ -27,6 +27,7 @@ Change Log
 
   - New Features:
      - Added Gadget::getChild() and Gadget::getChildCount() (for leonelhs).
+     - Added context menu example (for leonelhs).
 
   V0.37 (20090112)
   
